# creattive-agent

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.api  README.md  api.py  app.py  cloudbuild-api.yaml  docker-compose.evolution.yml  gcp_products.html  main.py  pyproject.toml  report_job.py
agent/: __init__.py  core.py  db.py  gemini_client.py  lead_extractor.py  memory.py  prompts.py  rag.py  reporter.py
knowledge/: catalogo.md  creattive.md  gcp_catalog.md
knowledge/backup/: creattive.md
pages/: 1_Leads.py
scripts/: evolution_setup.sh  ingest_pdfs.py  scrape_creattive.py  scrape_gcp_products.py
tests/: test_agent.py
