[project]
name = "creattive-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.48.0",
    "langchain-text-splitters>=0.2.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "google-cloud-storage>=3.4.1",
    "google-cloud-firestore>=2.19.0",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
